--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TinDog</title>
+  <title>Moonmind Creations</title>
   <!-- Bootstrap -->
+  <link rel="icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -35,10 +36,10 @@
               <a class="nav-link" href="#footer">Contact</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="">Have a question?</a>
+              <a class="nav-link" href="#cta">Have a question?</a>
           </li>
       </ul>
       </div>
@@ -52,7 +53,7 @@
     <div class="row">
       <div class="col-lg-6">
       <h1 class="big-heading">Learn to paint in artist's way from Charu</h1>
-      <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-regular fa-face-smile-beam"></i> About me </button>
+      <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-regular fa-face-smile-beam"></i> About me</button>
       <button type="button" class="btn btn-light btn-lg download-button"><i class="fa-solid fa-palette"></i> My works</button>
       </div>
     
@@ -98,12 +99,12 @@
     <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
-           <h2 class="price-test">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+           <h2 class="price-test">I have learnt from basics to advanced in Portrait painting from Charu mam</h2>
               <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
               <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item container-fluid">
-          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+          <h2 class="testimonial-text">In the beginning I was not confident with my painting skills but Charu mam helped me a lot</h2>
               <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
               <em>Beverly, Illinois</em>
         </div>
@@ -212,7 +213,7 @@
   <section class="colored-section" id="cta">
 
     <h3 class="foot-desc">Have a question?</h3>
-    <form>
+    <form method="post" action="mailto:moonmindcreations@gmail.com">
       <div class="form-row">
         <div class="col">
           <input type="text" class="form-control" placeholder="First name">
@@ -224,7 +225,7 @@
           <input type="email" class="form-control" placeholder="Email">
         </div>
         <input type="text" class="form-control" placeholder="Type your question" style="height: 150px">
-        <button type="button" class="btn btn-dark btn-lg download-button"> Submit </button>
+        <button type="submit" class="btn btn-dark btn-lg download-button"> Submit </button>
       </div>
     </form>
     
@@ -236,10 +237,10 @@
 
   <footer class="white-section" id="footer">
     <div class="footer-note">
-    <i class="social-icon fa-brands fa-square-facebook"></i>
-    <i class="social-icon fa-brands fa-twitter"></i>
-    <i class="social-icon fa-brands fa-instagram"></i>
-    <i class="social-icon fa-regular fa-envelope"></i>
+    <button class="footerLink"><i class="social-icon fa-brands fa-square-facebook"></i></button>
+    <button class="footerLink" onclick="window.open('https://m.youtube.com/@moonmind_creations/about','_blank');"><i class="fa-brands fa-youtube"></i></button>
+    <button class="footerLink" onclick="window.open('https://instagram.com/moonmind_creations?igshid=YmMyMTA2M2Y=','_blank');"><i class="social-icon fa-brands fa-instagram"></i></button>
+    <button class="footerLink" title="moonmindcreations@gmail.com" ><i class="social-icon fa-regular fa-envelope"></i></button>
     <p>© Copyright Moonmind Creations</p>
     </div>
 
